--- a/2.Scientific_Background.tex
+++ b/2.Scientific_Background.tex
@@ -51,7 +51,7 @@ The Wind Turbine Generator (herewith termed as Wind Generator (\gls{WG}) ) consi
     \begin{figure}[H]
 \centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 5.5cm,width = 8.5cm]{Diagrams/Chapter_2/Type3WT_1.PNG}
+    \includegraphics[height = 6.5cm,width = 12cm]{Diagrams/Chapter_2/Type3WT_new.pdf}
     \caption{Type 3 WT configuration \cite{ali_wind_2012}}
     \label{fig:Type3}
 \end{figure}
@@ -61,7 +61,7 @@ The Wind Turbine Generator (herewith termed as Wind Generator (\gls{WG}) ) consi
 \begin{figure}[H]
 \centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 4.5cm,width = 11.5cm]{Diagrams/Chapter_2/Type4WT_1.png}
+    \includegraphics[height = 4.5cm,width = 13cm]{Diagrams/Chapter_2/Type4WT_new.pdf}
     \caption{Type-4 WT configuration \cite{ali_wind_2012}}
     \label{fig:Type4}
 \end{figure}
