--- a/5.Operation_of_2GW.tex
+++ b/5.Operation_of_2GW.tex
@@ -146,7 +146,7 @@ The cable-1 gets energized when the CB-1a circuit breaker, as shown in Figure \r
     \label{fig:IABC_Cab1_Cab1charg}
 \end{figure}
 
-After cable-1 has been charged, the breaker at the \gls{OWF}-1 end (CB-1b) is switched on. \gls{OWF}-1 gets connected to the network. As mentioned in Section \ref{energization_HVAC_Cables}, the \gls{OWF}-1 is connected initially with less generation to keep the voltage at \gls{PCC}-1 within limits. The initial high voltage at the \gls{PCC}-1 before closing the breaker as seen in Figure \ref{VACP_WT1_WT1connect} is due to the capacitance in the DC link. Once the breaker is closed, the voltage is maintained at nearly 1 p.u. as shown in Figure \ref{VACP_WT1_WT1connect} and the currents in \gls{PCC}-1 also increase as shown in Figure \ref{IABC_WT1_WT1connect}. The \gls{OWF} starts generating 50 MW and this flows through \gls{MMC}-1 as shown in Figure \ref{P_MMC_1_WT1234connect}. In a similar way all the other \gls{OWF}s are connected. All \gls{OWF}s are connected with 50 MW generation. A total power of 200 MW through \gls{MMC}-1 after connection of \gls{OWF}-1, \gls{OWF}-2, \gls{OWF}-3 and \gls{OWF}-4 is clearly depicted in Figure \ref{P_MMC_1_WT1234connect}. There is no flow of active power in \gls{MMC}-2 (Figure \ref{P_MMC_2_WT1234connect}) since the rated capacity of 1 GW of \gls{MMC}-1 is yet to be reached.
+After cable-1 has been charged, the breaker at the \gls{OWF}-1 end (CB-1b) is switched on. \gls{OWF}-1 gets connected to the network. As mentioned in Section \ref{energization_HVAC_Cables}, the \gls{OWF}-1 is connected initially with less generation to keep the voltage at \gls{PCC}-1 within limits. The initial high voltage at the \gls{PCC}-1 before closing the breaker as seen in Figure \ref{VACP_WT1_WT1connect} is due to the capacitance in the DC link. Once the breaker is closed, the voltage is maintained at nearly 1 p.u. as shown in Figure \ref{VACP_WT1_WT1connect} and the currents in \gls{PCC}-1 also increase as shown in Figure \ref{IABC_WT1_WT1connect}. The \gls{OWF} starts generating 50 MW and this flows through \gls{MMC}-1 as shown in Figure \ref{P_MMC_1_WT1234connect}. In a similar way all the other \gls{OWF}s are connected. All \gls{OWF}s are connected with 50 MW generation. A total power of 200 MW through \gls{MMC}-1 after connection of \gls{OWF}-1, \gls{OWF}-2, \gls{OWF}-3 and \gls{OWF}-4 is clearly depicted in Figure \ref{P_MMC_1_WT1234connect}. There is no flow of active power in \gls{MMC}-2 (Figure \ref{P_MMC_2_WT1234connect}) since the rated capacity of 1 GW of \gls{MMC}-1 is yet to be reached. %The delay before connecting \gls{OWF}-4 at 0.5 s, that is depicted in the purple line in Figure \ref{P_MMC_1_WT1234connect} and Figure \ref{P_MMC_2_WT1234connect}, is due to the time delay in measurement of the signals.
 
 \begin{figure}[H]
 %\centering
@@ -167,7 +167,7 @@ After cable-1 has been charged, the breaker at the \gls{OWF}-1 end (CB-1b) is sw
 \begin{figure}[H]
 %\centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/P_MMC_1_WT1234connect.eps}
+    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/P_MMC_1_WT1234connect_2.eps}
     \caption{Active power in MMC-1 bus upon connecting all OWFs with 50 MW generation each}
     \label{P_MMC_1_WT1234connect}
 \end{figure}
@@ -175,7 +175,7 @@ After cable-1 has been charged, the breaker at the \gls{OWF}-1 end (CB-1b) is sw
 \begin{figure}[H]
 %\centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/P_MMC_2_WT1234connect.eps}
+    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/P_MMC_2_WT1234connect_2.eps}
     \caption{Active power in MMC-2 bus upon connecting all OWFs with 50 MW generation each}
     \label{P_MMC_2_WT1234connect}
 \end{figure}
