--- a/Acknowledgement.tex
+++ b/Acknowledgement.tex
@@ -1,5 +1,5 @@
 \chapter*{Acknowledgement}
-\setheader{Preface}
+
 There are many people to thank for the successful completion of this project. Firstly, I would like to thank Dr. Jose Rueda Torres for providing me this opportunity to work on such an interesting topic and guiding me throughout the research. His inputs and suggestions throughout the thesis have been extremely valuable. All the constructive criticisms have contributed to developing me as a good researcher and a good human being. I also would like to thank Prof. Mart van der Meijden for his suggestions and constant support through several meetings. He has always taken keen interest in letting me develop my skills and made me aware of the bigger picture of the work I was doing. I am incredibly thankful to both my supervisors for their support and goodwill during this thesis. 
 
 
@@ -9,30 +9,20 @@ A huge thanks to the AMD group: Murat Sorkun, Elif Sorkun, Qi Zhang, Xuan Zhou, 
 I want to thank Nitin Prasad for all his insightful suggestions and discussion during my thesis. Thank you for helping me find answers to the questions I had regarding catalysis. I would also like to thank Dr. Rifat Kamarudheen for all the heated discussions and debates on science, academia, and everything around! I would also like to thank Kiran George and Dr. Vivek Sinha for giving me insights about planning my thesis work. I would also like to thank Devyani Sharma for the much-needed coffee breaks and conversation between my work. Late-night discussions and motivational talk from Samuel Mani has played a massive role in me, keeping up my spirits through this thesis. Thank you so much for that! I want to thank my friends Saran, Preetha, Kammath, Reuben, Apurva, Shrinidhi, Thejus, Arun, Hitha, Mamta, Sid, Geo, Jesil and all my friends back home for helping me during this time.
 Last but not least, my family has been supportive and encouraging of my decisions during this time. I thank Amma, Appa, Vivek, Yamini, Rohit, Prabhat, and Ammama for their love and support. I am indebted to them for all that they have done for me. I wish my granddad was here to see me complete this master's. He was dearly missed during this time.
 
-
-
-
-\newpage
-\chapter*{Abstract}
-\setheader{Preface}
-To meet the European climate target of 27\% by 2030 in an effective way, large scale offshore wind energy proves to be an important target for the Netherlands. %The international association consisting of TenneT, Energinet, Gausine and Port of Rotterdam is working on developing technical solutions for supplying clean energy from renewable energy sources in large scale. 
-This includes the possibility of developing offshore infrastructure for deploying offshore wind power generation with installed capacity ranging from 70 to 150 GW by 2040, and increasing upto 180 GW by 2045. 
-
-The currently available state-of-the-art technology using conventional current control are suitable for 
-
-
-However, the implementation of large scale offshore networks leads to an increase in the penetration of power electronic (PE) converter based units in the electrical power system. The increase in PE converters causes technical challenges (e.g. due to unprecedented fast dynamic phenomena) related to voltage and frequency stability, and power flow analysis in the power system.
-
- 
-To mitigate these challenges corresponding voltage stability and power flow in the network due to increasing PE converters, a Direct Voltage Control (DVC) strategy is implemented in RSCAD for Electro-Magnetic Transient (EMT) based simulations. After analyzing the need for 66 kV High Voltage Alternating Current (HVAC) transmission from the Offshore Wind Farms (OWFs) to the offshore converter station, in this thesis, a 66 kV offshore network is developed with the control strategy implemented in Type-4 Wind Generators (WGs) in RSCAD. The DVC provides continuous voltage control that improves the dynamic performance of the power system. The significant requirement of reactive power injection by the OWFs during dynamic conditions as mentioned in many grid codes is satisfied by the controller and it avoids the need of an external controller to perform such an action. The working of the DVC in RSCAD is validated for EMT simulations under severe dynamic conditions by developing a similar 66 kV HVAC network in PowerFactory with the benchmark DVC model. The RSCAD model also provides a better representation of the practical environment operation. 
-
-The final goal of developing a large scale network with a defined topology for 2 GW is achieved in a modular approach in RSCAD. In this network, four sets of OWFs are connected across two offshore Modular Multi-level Converters (MMCs) working in two different control schemes. The coordination between the implemented DVC in WGs and the control structures in MMCs is analysed for different scenarios in the network. The performance of the 2 GW network in terms of short-term voltage stability and power flow during severe dynamic conditions in the grid is analyzed. The requirement of reactive power injection from OWF during dynamic conditions is analyzed by performing a three-phase fault scenario in the middle of the cable, thereby islanding the OWF.
-
 \begin{flushright}
 {\makeatletter\itshape
     \@author \\
     Delft, October 2020
 \makeatother}
 \end{flushright}
+
+%The international association consisting of TenneT, Energinet, Gausine and Port of Rotterdam is working on developing technical solutions for supplying clean energy from renewable energy sources in large scale.
+
+
+
+
+ 
+
+
 
 
