--- a/report.tex
+++ b/report.tex
@@ -130,23 +130,24 @@
 
 \author{Saran Ganesh}
 %\affiliation{Technische Universiteit Delft}
-\includepdf{Saran_cover_diff_color_newmargin.pdf}
+%\includepdf{Saran_cover_diff_color_newmargin.pdf}
 %\makecover
 
 %% Include an optional title page.
-\input{title}
+%\input{title}
 
-\input{preface}
+%\input{Acknowledgement}
+\input{Abstract}
 
-\tableofcontents
+%\tableofcontents
 
 
 
-\listoffigures
+%\listoffigures
 
-\listoftables
+%\listoftables
 
-\printglossary[title=List of Abbreviations]
+%\printglossary[title=List of Abbreviations]
 
 
 %% Use Arabic numerals for the page numbers of the chapters.
@@ -155,22 +156,22 @@
 
 \input{1.Introduction}
 \input{2.Scientific_Background}
-\input{3.Implementation_of_DVC}
-\input{4.Large_scale}
-\input{5.Operation_of_2GW}
-\input{6.Conclusions_and_future_scope}
+%\input{3.Implementation_of_DVC}
+%\input{4.Large_scale}
+%\input{5.Operation_of_2GW}
+%\input{6.Conclusions_and_future_scope}
 
-\begin{appendices}
-\input{Appendix-a}
-\input{Appendix-b}
-\input{Appendix-c}
-\input{Appendix-d}
-\end{appendices}
+% \begin{appendices}
+% \input{Appendix-a}
+% \input{Appendix-b}
+% \input{Appendix-c}
+% \input{Appendix-d}
+% \end{appendices}
 %\bibliographystyle{ieeetran}
 %% Use letters for the chapter numbers of the appendices.
 
 
-\bibliography{references_3,report}
+%\bibliography{references_3,report}
 %\AtEveryBibitem{\clearlist{language}}
 
 \end{document}
